# experiments-pocs

./: README.md
llm_stage_routing_aiseller/: .env.example  .gitignore  README.md  catalog.json  cursor_poc_prompt.md  main.py  pyproject.toml
llm_stage_routing_aiseller/evaluations/: full_comparison_20260125_193547.md  full_comparison_20260125_195250.md  full_comparison_20260125_200555.md  full_comparison_20260125_201950.md  full_comparison_20260125_202800.md  headphones_multi_purchase_comparison_20260125_184814.md  headphones_multi_purchase_comparison_20260125_185608.md  headphones_multi_purchase_comparison_20260125_190615.md
llm_stage_routing_aiseller/src/: __init__.py  cart_store.py  catalog.py  colors.py  graph.py  nodes.py  prompts.py  state.py  tools.py
llm_stage_routing_aiseller/src_eval/: __init__.py  judge.py  report.py  runner.py  scenarios.py
llm_stage_routing_aiseller/src_react/: __init__.py  react_agent.py  state.py  tools.py
webcrawler/: README.md
webcrawler/v0/: main.py  pyproject.toml
webcrawler/v0-hello-web-crawler/: README.md
webcrawler/v1/: README.md  main.py  pyproject.toml
webcrawler/v10/: README.md
webcrawler/v2/: README.md
webcrawler/v3/: README.md
webcrawler/v4/: README.md
webcrawler/v5/: README.md
webcrawler/v6/: README.md
webcrawler/v7/: README.md
webcrawler/v8/: README.md
webcrawler/v9/: README.md
